Adding tests for events, fixes
